# qa_guru_python_8_22

./: .env.bstack  .env.local_emulator  .env.local_real  .gitignore  README.md  config.py  conftest.py  pyproject.toml
tests/: conftest.py  test_wikipedia.py
utils/: attach.py  config.py
